package com.impulsfp.mobile.ui

import androidx.compose.foundation.Image
import androidx.compose.foundation.clickable
import androidx.compose.foundation.layout.Arrangement
import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.layout.size
import androidx.compose.material3.Button
import androidx.compose.material3.CircularProgressIndicator
import androidx.compose.material3.MaterialTheme
import androidx.compose.material3.OutlinedTextField
import androidx.compose.material3.Text
import androidx.compose.runtime.Composable
import androidx.compose.runtime.LaunchedEffect
import androidx.compose.runtime.collectAsState
import androidx.compose.runtime.getValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.painterResource
import androidx.compose.ui.text.input.PasswordVisualTransformation
import androidx.compose.ui.text.style.TextAlign
import androidx.compose.ui.unit.dp
import androidx.lifecycle.viewmodel.compose.viewModel
import com.impulsfp.mobile.R

/**
 * Pantalla de login de l'aplicació.
 *
 * Mostra la interfície d'autenticació de l'usuari, permetent introduir
 * el nom d'usuari i la contrasenya, visualitzar errors d'autenticació
 * i iniciar el procés de validació contra el sistema.
 *
 * Quan el procés de login finalitza correctament, s'executa el callback
 * [onLoginSuccess] i es reinicia l'estat corresponent del ViewModel
 * per evitar navegacions repetides.
 *
 * També ofereix un accés directe a la pantalla de registre per als
 * usuaris que encara no tenen compte.
 *
 * @param onLoginSuccess Funció que s'executa quan el login és correcte
 * @param onRegisterClick Funció que s'executa quan l'usuari vol anar al registre
 * @param loginViewModel ViewModel encarregat de gestionar l'estat i la lògica del login
 *
 * @author abenitez
 */
@Composable
fun LoginScreen(
    onLoginSuccess: () -> Unit,
    onRegisterClick: () -> Unit,
    loginViewModel: LoginViewModel = viewModel()
) {
    val uiState by loginViewModel.uiState.collectAsState()

    LaunchedEffect(uiState.loginSuccess) {
        if (uiState.loginSuccess) {
            onLoginSuccess()
            loginViewModel.resetLoginSuccess()
        }
    }

    Box(
        modifier = Modifier
            .fillMaxSize()
            .padding(24.dp),
        contentAlignment = Alignment.Center
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .align(Alignment.Center),
            verticalArrangement = Arrangement.spacedBy(12.dp),
            horizontalAlignment = Alignment.CenterHorizontally
        ) {
            Image (
                painter = painterResource(id = R.drawable.logo),
                contentDescription = "Logo ImpulsFP",
                modifier = Modifier.size(250.dp)
            )
            Text(
                text = "Inicia sessió",
                style = MaterialTheme.typography.headlineMedium,
                modifier = Modifier.fillMaxWidth(),
                textAlign = TextAlign.Start
            )

            OutlinedTextField(
                value = uiState.username,
                onValueChange = { loginViewModel.onUsernameChange(it)},
                label = { Text("Usuari")},
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("usernameField"),
                singleLine = true
            )

            OutlinedTextField(
                value = uiState.password,
                onValueChange = { loginViewModel.onPasswordChange(it) },
                label = { Text("Contrasenya")},
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("passwordField"),
                singleLine = true,
                visualTransformation = PasswordVisualTransformation()
            )

            uiState.errorMessage?.let {
                Text(
                    text = it,
                    color = MaterialTheme.colorScheme.error
                )
            }

            Button(
                onClick = { loginViewModel.login() },
                enabled = !uiState.isLoading,
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("loginButton")
            ) {
                if (uiState.isLoading) {
                    CircularProgressIndicator()
                } else {
                    Text("Iniciar Sessió")
                }
            }

            Text(
                text = "No tens compte? Registra’t",
                color = MaterialTheme.colorScheme.primary,
                modifier = Modifier
                    .fillMaxWidth()
                    .clickable { onRegisterClick() }
                    .padding(top = 8.dp),
                textAlign = TextAlign.Center
            )
        }
    }
}